[package]
name = "lua-syntect"
version = "0.1.0"
authors = ["Hisham Muhammad <hisham@gobolinux.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntect = "3.2"
libc = "*"

[lib]
name = "syntect"
crate-type = ["dylib"]
